Fix font size and overflow of the container

--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,5 @@
 
 .App {
   background-color: inherit;
+  overflow-x: hidden;
 }
