--- a/src/styles/CurrencyPair.css
+++ b/src/styles/CurrencyPair.css
@@ -34,7 +34,7 @@
 }
 
 .currency-rate span {
-  font-size: 1.1rem;
+  font-size: 0.9rem;
   font-weight: 700;
   color: white;
   margin-bottom: 0.4rem;
@@ -48,7 +48,7 @@
 }
 
 .currency-pair-text {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-weight: 700;
 }
 
